namespace VetMed.Shared.Enums;

/// <summary>Płeć zwierzęcia.</summary>
public enum PetSex
{
    Nieznana = 0,
    Samiec = 1,
    Samica = 2
}
