namespace VetMed.Shared.Enums;

/// <summary>Rodzaj wizyty weterynaryjnej.</summary>
public enum VisitType
{
    Szczepienie = 0,
    Kontrola = 1,
    Zabieg = 2,
    Nagly = 3,
    Diagnostyka = 4
}
